[gd_scene load_steps=3 format=3 uid="uid://d4c7f7764qsos"]

[ext_resource type="Script" path="res://Scripts/end_screen.gd" id="1_30m4x"]
[ext_resource type="Theme" uid="uid://bjjf52pu6ckx6" path="res://Themes/Menu.tres" id="1_pn3cp"]

[node name="EndScreen" type="Control"]
process_mode = 3
layout_mode = 3
anchor_right = 0.351
anchor_bottom = 0.264
offset_top = 3.0
offset_right = 472.72
offset_bottom = 225.92
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_pn3cp")
script = ExtResource("1_30m4x")

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -503.0
offset_top = -232.5
offset_right = 431.0
offset_bottom = 119.5
grow_horizontal = 2
grow_vertical = 2
color = Color(0.101961, 0.101961, 0.101961, 0.698039)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_left = -33.0
offset_top = -18.0
offset_right = 857.0
offset_bottom = 369.0

[node name="GridContainer" type="GridContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Header" type="Label" parent="CenterContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Congratulations. You have beaten the game."

[node name="Spacer2" type="Label" parent="CenterContainer/GridContainer"]
layout_mode = 2

[node name="Text" type="Label" parent="CenterContainer/GridContainer"]
layout_mode = 2
text = "Now you have unlocked the ability to explore
The Test Level. Here you will be able to use all the abilities
you have unlocked and test them to your heart's content."

[node name="Spacer" type="Label" parent="CenterContainer/GridContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="."]
layout_mode = 2
offset_left = -42.0
offset_top = 348.0
offset_right = 892.0
offset_bottom = 433.0
pivot_offset = Vector2(460, 40)
text = "Start Exploring."

[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
